@@ -1,4 +1,10 @@
 2010-10-04
+ Support for tcloo "my" command.
+
+2010-10-04
+ Support for tcloo "next" command.
+
+2010-10-04
  Provide _stdclass_oo in syntaxdb.
  Handle constructor and superclass in oo.
 
